# oxidize

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  dockerfile  otel-collector-config.yaml
docs/: database.md  testing.md
migrations/: 20240108033256_create_sample.sql
scripts/: build_dependencies.sh  run_tests.sh
src/: api.rs  constants.rs  endpoints.rs  lib.rs  main.rs  monitoring.rs  observability.rs  server.rs  state.rs  subscribers.rs
src/api/: errors.rs  response.rs  sample.rs  system.rs  v1.rs
src/api/sample/: forms.rs  handlers.rs  model.rs
src/api/v1/: sample.rs
src/api/v1/sample/: forms.rs  handlers.rs  model.rs  responses.rs
src/db/: postgres.rs
src/endpoints/: sample.rs
src/endpoints/sample/: handlers.rs  responses.rs
src/monitoring/: providers.rs  tags.rs  trace.rs
src/observability/: otel.rs
src/tests/: api.rs
src/tests/api/: health.rs  sample.rs
tests/: healthcheck.rs  integration_tests.rs  sample.rs  sample_old.rs
tests/common/: mod.rs
tests/fixtures/: 20240109021054_insert_samples.sql  20240504224652_insert_samples.down.sql  20240504224652_insert_samples.up.sql
tests/v1/: sample.rs
