[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "oxidize"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
dotenvy = "0.15.7"
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"], default-features = false }
