[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "oxidize"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
dotenvy = "0.15.7"
futures = "0.3.30"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"], default-features = false }

[dev-dependencies]
http-body-util = "0.1.1"
reqwest = { version = "0.12.4", features = ["json"] }

[[test]]
name = "integration_tests"
test = false
