[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "oxidize"

[dependencies]
anyhow = "1.0.82"
axum = "0.8.7"
axum-macros = "0.5.0"
chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
dotenvy = "0.15.7"
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http", "zstd-http"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["timeout", "trace", "compression-full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "std", "registry", "fmt"] }
uuid = { version = "1.6.1", features = ["serde", "v4"], default-features = false }

[dev-dependencies]
http-body-util = "0.1.1"
reqwest = { version = "0.12.24", features = ["json"] }

[[test]]
name = "integration_tests"
test = false
